Removing micromatch/filter support

--- a/package.json
+++ b/package.json
@@ -26,9 +26,7 @@
   "peerDependencies": {
     "react": "*"
   },
-  "dependencies": {
-    "micromatch": "^4.0.2"
-  },
+  "dependencies": {},
   "devDependencies": {
     "aws-iot-device-sdk": "^2.2.1",
     "uglify-js": "^3.4.9",
