Back to where we started

--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react": "*"
   },
   "dependencies": {
-    "fastestsmallesttextencoderdecoder": "^1.0.21"
+    "fastestsmallesttextencoderdecoder": "^1.0.21",
+    "text-encoding": "^0.7.0"
   },
   "devDependencies": {
     "aws-iot-device-sdk": "^2.2.1",
